# scraper-apple

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  config.py  docker-compose.yml  filters.py  pyproject.toml  scraper.py  scraper_mac_skill.md
src/mac_scraper/: __main__.py  config.py
src/mac_scraper/adapters/: apple_scraper.py  ntfy_notifier.py  sqlite_repository.py
src/mac_scraper/application/: sync_service.py
src/mac_scraper/domain/: exceptions.py  models.py  specifications.py
src/mac_scraper/ports/: notifier.py  repository.py  scraper.py
tests/: conftest.py  test_filters.py  test_specifications.py  test_sync_service.py
tests/integration/: test_sqlite_repository.py
