[project]
name = "mac-scraper"
version = "1.0.0"
description = "Surveille l'inventaire Apple Reconditionnés et notifie via ntfy.sh"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_scraper"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["mac_scraper"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
